Bug 570194 - [16] warnings for The constructor Integer(int) has been deprecated and marked for removal
Change-Id: I59239647af83846a93c3aaf0c91b2c8e3a58e80e
Signed-off-by: Vikas Chandra <Vikas.Chandra@in.ibm.com>