@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2016 IBM Corporation and others.
+ * Copyright (c) 2000, 2021 IBM Corporation and others.
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -284,10 +284,10 @@ public Object getWrappedConstantValue() {
 					this.wrappedConstantValue = Character.valueOf(fieldConstant.charValue());
 					break;
 				case TypeIds.T_float :
-					this.wrappedConstantValue = new Float(fieldConstant.floatValue());
+					this.wrappedConstantValue = Float.valueOf(fieldConstant.floatValue());
 					break;
 				case TypeIds.T_double :
-					this.wrappedConstantValue = new Double(fieldConstant.doubleValue());
+					this.wrappedConstantValue = Double.valueOf(fieldConstant.doubleValue());
 					break;
 				case TypeIds.T_boolean :
 					this.wrappedConstantValue = Util.toBoolean(fieldConstant.booleanValue());
